docs/7.52/md/abenxml_oview.md
---
title: "XML - Short Overview"
description: |
  XML (Extensible Markup Language)(http://www.w3.org/xml/) is used to represent data structured in different ways. This makes it very useful for communications between different applications and for the integration of data from different applications. XML data comprises metadata (markups) in the for
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenxml_oview.htm"
abapFile: "abenxml_oview.htm"
keywords: ["do", "if", "try", "data", "abenxml", "oview"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) → 

XML - Short Overview

[XML (Extensible Markup Language)](http://www.w3.org/xml/) is used to represent data structured in different ways. This makes it very useful for communications between different applications and for the integration of data from different applications.

XML data comprises metadata (markups) in the form of tags and the actual data in the form of elements. XML does not specify a fixed set of tags.

In XML 1.0 format, tags are wrapped in pointy brackets and always appear in pairs, with <tag> marking the start of an element and </tag> the end of an element.

<tag>
  ...
</tag>

A short way of writing an empty element <tag></tag> is

<tag />

. Elements can be nested inside other elements to any depth. A subelement can be specified more than once within an element.

<tag>
  <tag1>
    <tag2>
      ...
    </tag2>
  </tag1>
  <tag1>
    ...
  </tag1>
  ...
</tag>

Valid XML data contains exactly one root element, in which all other elements are nested.

Alongside subelements, attributes are allowed. These are defined in the opening tag of an element:

<tag attribute="...">

The attributes of an element are specified as name-value pairs using the equals sign \= before the closing bracket and do not themselves contain markups. Attributes can be delimited using double quotation marks, ", and single quotation marks, '. An attribute can only be specified once within an element. The order in which the attributes are specified is not important.

To stop naming conflicts occurring when XML data from different sources is processed, tags can be given namespaces. Special xmlns attributes are used to declare namespaces. A uniform resource identifier (URI) is attached to a namespace prefix ns.

<... xmlns:ns="...">

Prefixing a tag or attribute with a namespace prefix ns separated by a colon : gives the tag or element a qualified name:

<tag xmlns:ns="...">
  <ns:tag ns:attribute="...">
    ...
  </ns:tag>
  ...
</tag>

A namespace prefix must be defined in the same document before it is used.

Characters that have a separate meaning in XML syntax need to be escaped if they appear in values of elements or attributes:

Character

XML Notation

<

&lt;

\>

&gt;

&

&amp;

" in attributes delimited by "

&quot;

' in attributes delimited by '

&apos;

XML data is valid (well-formed) if it does not break any XML rules. Generally speaking, XML data must be well-formed before it can be processed by an XML parser.

Notes

-   The XML 1.0 format shown here (character strings in pointy brackets) is only one way of representing XML data, although it is the most widely used. A [W3C recommendation](http://www.w3.org/tr/xml-infoset/) states that the tree-like arrangement of data in information sets defines the XML format. Any data structured in this way can be handled as XML data. Other notations can also be used, not just XML 1.0. For example, SAP's own [Binary XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbinary_xml_glosry.htm "Glossary Entry") uses a binary format instead of character strings and does not delimit tags with pointy brackets. ABAP supports further formats alongside XML 1.0 thanks to [sXML Library](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_sxml_lib.htm).

-   The program DEMO\_XML\_SYNTAX\_CHECK enables XML data to be entered and its syntax checked.